prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_12.zkc
//error:3:20-21:unknown symbol

const IDX:u8 = 1 + x
//
fn main() {
  var items:[u8;IDX]
}
